change threadpool size for async benchmarks.